syntax = 'proto2';

message Asset {
	required string data = 1;
	required FooBar fooBar = 2;
}

message FooBar {
	required uint32 foo = 1;
	required uint32 bar = 2;
}

message Objects {
	required bytes address = 1;
	required uint64 balance = 2;
	required bool isValidator = 3;
	required string name = 4;
	required Asset asset = 5;
}

message ObjectWithOptionalProp {
	required bool isActive = 1;
	optional bytes data = 2;
	required uint64 value = 3;
}
